--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>HELLO WORLD!</div>
+    <div><h1>HELLO WORLD!</h1></div>
 </body>
 </html>
